Fix the logo stretching bug. Probably should go upstream?

--- a/app/assets/stylesheets/common/minimal.css.scss
+++ b/app/assets/stylesheets/common/minimal.css.scss
@@ -9,7 +9,7 @@
 
     img {
       opacity: 0.5;
-      max-height: 50px;
+      height: 50px;
       margin: auto 0;
     }
   }
